--- a/src/e_cidadania/apps/spaces/templates/spaces/edit_doc.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/edit_doc.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Edit news" %}{% endblock %}
+{% block title %}{% trans "Edit document" %}{% endblock %}
 {% block logo %}<a href="/"><img src="/{{ MEDIA_URL }}spaces/logos/logo_index.png"/></a>{% endblock %}
 {% block banner %}<img src="/{{ MEDIA_URL }}spaces/banners/banner_index.png"/>{% endblock %}
 
