Minor fixes to dev url and add documents

--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -90,7 +90,7 @@
 
     <div id="widget">
       <h4>{% trans "e-cidadania development" %}</h4>
-      <p>{% trans "Do you want to help?" %} <a href="http://dev.e-cidadania.org">{% trans "Access" %}</a></p>
+      <p>{% trans "Do you want to help?" %} <a href="http://dev.ecidadania.org">{% trans "Access" %}</a></p>
     </div>
 
   </div>
