--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -22,10 +22,12 @@
       {% if get_place.mod_news %}
         {% for news in publication %}
             <div class="post">
+              {% if user.is_staff %}
               <div id="tools">
                 <a href="{{ request.path }}news/edit/{{ news.id }}/">Edit</a> |
                 <a href="{{ request.path }}news/delete/{{ news.id }}/">Delete</a>
               </div>
+              {% endif %}
               <h1>{{ news.post_title }}</h1>
               <p>{{ news.post_message }}</p>
               <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</p>
