--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -86,7 +86,7 @@
     </div>
 
     <div id="widget">
-      <h4>{% trans "e-cidadania development" %}</h4>
+      <h4>{% trans "e-cidadania development" %}</h4><br />
       <p>{% trans "Do you want to help?" %} <a href="http://dev.ecidadania.org">{% trans "Access" %}</a></p>
     </div>
 
