--- a/src/e_cidadania/apps/proposals/templates/proposal/list_proposals.html
+++ b/src/e_cidadania/apps/proposals/templates/proposal/list_proposals.html
@@ -11,23 +11,22 @@
     {{ proposal.title }}
     {% for p in proposal_list %}
       <div id="proposal-wrapper">
-        <div id="votes"></div>
+        <div id="tools">
+          <a href="add/">{% trans "Add" %}</a> | 
+          <a href="edit/{{ p.id }}">{% trans "Edit" %}</a> |
+          <a href="delete/{{ p.id }}">{% trans "Delete" %}</a>
+        </div>
+        <div id="votes"><span style="font-size:30px;text-align:center;">0</span><br/>apoyos</div>
         <!-- Here goes the voting button -->
         <div id="proposal">
-          <div class="title">{{ p.title }}</div>
-          <div class="message">{{ p.message }}</div>
-          <div class="creator">{% trans "proposed by " %} {{ p.author }} {% trans " at " %} {{ p.pub_date }}</div>
-          {% comment %}
-          ADAPTAR LO QUE VIENE
-          {% endcomment %}
+          <div class="title"><a href="{{ request.path }}view/{{ p.id }}/">{{ p.title }}</a></div>
+          <div class="message">{{ p.message|truncatewords:12 }}</div>
           {% get_comment_count for p as comment_count %}
-          <div>Esta propuesta tiene {{ comment_count }} comentarios.</div>
+          <div class="creator">{% trans "proposed by " %} <a href="/accounts/{{ p.author }}">{{ p.author }}</a> {% trans " at " %} {{ p.pub_date|date:"j/m/Y G:i" }} | <a href="{{ request.path }}view/{{ p.id }}#comments">{{ comment_count }} {% trans "comments" %}</a></div>
         </div>
-        <div class="proposal-tools">
-          <a href="edit/">{% trans "Edit" %}</a> |
-          <a href="add/">{% trans "Add" %}</a> | 
-          <a href="delete/">{% trans "Delete" %}</a>
-        </div>
+        {% comment %}
+          The following div is to make the wrapper to wrap everything.
+        {% endcomment %}
         <div style="clear:left;"></div>
       </div>
     {% endfor %}
