--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -59,10 +59,11 @@
             {% empty %}
               <p>{% trans "No documents available" %}</p>
             {% endfor %}
-            {% if user.is_staff %}
-              <br /><p><a href="{{ request.path }}docs/add/">{% trans "Add documents"%}</a></p>
-            {% endif %}
           </ul>
+          <br /><p><a href="{{ request.path }}docs/">{% trans "View all documents" %}</a></p>
+          {% if user.is_staff %}
+            <p><a href="{{ request.path }}docs/add/">{% trans "Add documents"%}</a></p>
+          {% endif %}
         </div>
         {% endif %}
 
@@ -76,9 +77,17 @@
         {% if get_place.mod_proposals %}
         <div id="widget">
           <h2>{% trans "Newest proposals" %}</h2><br />
+          <ul>
           {% for proposal in proposals %}
-            <p><a href="{{ request.path }}proposal/{{ proposal.id }}">{{ proposal.title }}</a></p>
+            <li>
+              <a href="{{ request.path }}proposal/view/{{ proposal.id }}/">{{ proposal.title }}</a>
+            </li>
           {% endfor %}
+          </ul>
+          <br /><p><a href="{{ request.path }}proposal/">{% trans "View all proposals" %}</a></p>
+          {% if user.is_staff %}
+            <p><a href="{{ request.path }}proposal/add/">{% trans "Add proposal" %}</a></p>
+          {% endif %}
         </div>
         {% endif %}
 
