--- a/src/e_cidadania/templates/comments/list.html
+++ b/src/e_cidadania/templates/comments/list.html
@@ -1,10 +1,16 @@
-<dl id="comments">
+{% load i18n %}
+<div id="comments">
+  <div id="ctitle">{% trans "Comments" %}</div>
+  
   {% for comment in comment_list %}
-    <dt id="c{{ comment.id }}">
-        {{ comment.submit_date }} - {{ comment.name }}
-    </dt>
-    <dd>
+  <div id="comment">
+    <div id="c{{ comment.id }}" class="comment_data">
+        {% trans "Written by" %} {{ comment.name }} - {{ comment.submit_date|date:"j/m/Y G:i" }}
+    </div>
+    <div class="comment_text">
         <p>{{ comment.comment }}</p>
-    </dd>
+    </div>
+  </div>
   {% endfor %}
-</dl>
+  
+</div>
