--- a/src/e_cidadania/apps/proposals/templates/proposal/view_proposal.html
+++ b/src/e_cidadania/apps/proposals/templates/proposal/view_proposal.html
@@ -10,17 +10,21 @@
     <div id="centercol">
     
       <div id="proposal-wrapper">
+        {% if user.is_staff %}
         <div id="tools">
           <a href="add/">{% trans "Add" %}</a> | 
           <a href="edit/{{ p.id }}">{% trans "Edit" %}</a> |
           <a href="delete/{{ p.id }}">{% trans "Delete" %}</a>
         </div>
-        <div id="votes"></div>
+        {% endif %}
+        <div id="votes">
+          <span style="font-size:30px;text-align:center;">{{ proposal.support_votes }}</span><br/>apoyos
+        </div>
         <!-- Here goes the voting button -->
         <div id="proposal">
           <div class="title">{{ proposal.title }}</div>
           <div class="message">{{ proposal.message }}</div>
-          <div class="creator">{% trans "proposed by " %} {{ p.author }} {% trans " at " %} {{ p.pub_date }}</div>
+          <div class="creator">{% trans "proposed by " %} {{ proposal.author }} {% trans " at " %} {{ proposal.pub_date }}</div>
         </div>
         <div style="clear:left;"></div>
       </div>
