--- a/src/e_cidadania/templates/comments/form.html
+++ b/src/e_cidadania/templates/comments/form.html
@@ -1,5 +1,6 @@
 {% load comments i18n %}
-<form action="{% comment_form_target %}" method="post">{% csrf_token %}
+<div id="ctitle">{% trans "Leave a comment" %}</div>
+<form action="{% comment_form_target %}" method="post" class="commentform">{% csrf_token %}
   {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
   {% for field in form %}
     {% if field.is_hidden %}
