--- a/src/e_cidadania/templates/comments/list.html
+++ b/src/e_cidadania/templates/comments/list.html
@@ -5,7 +5,7 @@
   {% for comment in comment_list %}
   <div id="comment">
     <div id="c{{ comment.id }}" class="comment_data">
-        {% trans "Written by" %} {{ comment.name }} - {{ comment.submit_date|date:"j/m/Y G:i" }}
+        <strong>#{{ comment.id }}</strong> {{ comment.submit_date|date:"F j, Y G:i"|capfirst }} - <a href="/accounts/{{ comment.name }}">{{ comment.name }}</a> {% trans "said" %}:
     </div>
     <div class="comment_text">
         <p>{{ comment.comment }}</p>
