--- a/src/e_cidadania/templates/comments/posted.html
+++ b/src/e_cidadania/templates/comments/posted.html
@@ -1,4 +1,4 @@
-{% extends "comments/base.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Thanks for commenting" %}.{% endblock %}
