--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -135,6 +135,14 @@ input[type="text"], input[type="password"] {
     border: 1px solid #FF6666;
 }
 
+.instructions {
+    list-style: square;
+}
+
+.instructions li {
+    margin: 10px;
+}
+
 /* END COMMON CLASSES */
 
 
@@ -280,7 +288,6 @@ input[type="text"], input[type="password"] {
     color: #000;
     font-weight: bold;
     margin-left: 20px;
-    text-transform: capitalize;
     margin-bottom: 15px;
 }
 
