--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load comments %}
 
 {% block title %}{{ get_place.name|capfirst }} - {% trans "Index" %}{% endblock %}
 {% block logo %}<img src="/{{MEDIA_URL}}{{ get_place.logo }}">{% endblock %}
@@ -24,13 +25,14 @@
             <div class="post">
               {% if user.is_staff %}
               <div id="tools">
-                <a href="{{ request.path }}news/edit/{{ news.id }}/">Edit</a> |
-                <a href="{{ request.path }}news/delete/{{ news.id }}/">Delete</a>
+                <a href="{{ request.path }}news/{{ news.id }}/edit/">Edit</a> |
+                <a href="{{ request.path }}news/{{ news.id }}/delete/">Delete</a>
               </div>
               {% endif %}
-              <h1>{{ news.post_title }}</h1>
+              <h1><a href="{{ request.path }}news/{{ news.id }}">{{ news.post_title }}</a></h1>
               <p>{{ news.post_message }}</p>
-              <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</p>
+              {% get_comment_count for news as comment_count %}
+              <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }} | <a href="{{ request.path }}news/{{ news.id }}/">{{ comment_count }} {% trans "comments" %}</a></p>
             </div>
         {% empty %}
           <div class="post">
@@ -52,8 +54,8 @@
               <li>
                 <a href="/{{ MEDIA_URL }}{{ doc.docfile }}">{{ doc.title }}</a>
                 {% if user.is_staff %}
-                  (<a href="{{ request.path }}docs/edit/{{ doc.id }}/">Edit</a> | 
-                  <a href="{{ request.path }}docs/delete/{{ doc.id }}/">Delete</a>)
+                  (<a href="{{ request.path }}docs/{{ doc.id }}/edit/">Edit</a> | 
+                  <a href="{{ request.path }}docs/{{ doc.id }}/delete/">Delete</a>)
                 {% endif %}
               </li>
             {% empty %}
