--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
@@ -6,77 +6,111 @@
 {% block robots %}noindex,nofollow{% endblock %}
 
 {% block content %}
-    {% if GOOGLE_MAPS_API_KEY and user.get_profile.location %}
-        <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-        <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
-        <script type="text/javascript">
-            function initialize() {
-                var latlng = new google.maps.LatLng( {{ user.get_profile.latitude|stringformat:"s" }}, {{ user.get_profile.longitude|stringformat:"s" }} );
-                var opts = {
-                    zoom: 15,
-                    center: latlng,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                };
-                var map = new google.maps.Map(document.getElementById("location"), opts);
-                var marker = new google.maps.Marker({
-                    position: latlng,
-                    map: map,
-                    title:"User!"
-                });
-            };
-        </script>
+
+  {% if GOOGLE_MAPS_API_KEY and user.get_profile.location %}
+    <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
+    <script type="text/javascript">
+      function initialize() {
+        var latlng = new google.maps.LatLng( {{ user.get_profile.latitude|stringformat:"s" }}, {{ user.get_profile.longitude|stringformat:"s" }} );
+        var opts = {
+            zoom: 15,
+            center: latlng,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        var map = new google.maps.Map(document.getElementById("location"), opts);
+        var marker = new google.maps.Marker({
+            position: latlng,
+            map: map,
+            title:"User!"
+        });
+    };
+    </script>
     {% endif %}
+    
     <div id="contenttitles">
       {% blocktrans with user.username as username %}
         {{ username }} profile
       {% endblocktrans %}
     </div>
+    
     <div id="useropts">
 	    <a href="{{ request.path.info }}edit/personal">{% trans "Edit personal data" %}</a> |
 	    <a href="{{ request.path.info }}edit/location/">{% trans "Edit location" %}</a> |
 	    <a href="{{ request.path.info }}delete/">{% trans "Delete profile" %}</a> |
 	    <a href="{{ request.path.info }}{{ user.username }}">{% trans "Public profile" %}</a>
 	  </div>
+	  
     <div id="profile_right">
-        <div id="avatar" class="span-3 center">
-        	<a href="{% url profile_edit_avatar %}">
-        		<img class="border" src="/static/generic.96.jpg" />
+      <div id="avatar" class="span-3 center">
+      	<a href="{% url profile_edit_avatar %}">
+       		<img class="border" src="/static/generic.96.jpg" />
 	    	</a>
-        	<p><a href="{{ request.path_info }}edit/avatar/">{% if user.get_profile.has_avatar %}{% trans "Change avatar" %}{% else %}{% trans "Add avatar" %}{% endif %}</a></p>
+       	<p><a href="{{ request.path_info }}edit/avatar/">{% if user.get_profile.has_avatar %}{% trans "Change avatar" %}{% else %}{% trans "Add avatar" %}{% endif %}</a></p>
 	    </div>
 
 	   	<div>
-			<p>{% trans "Username: " %} {{ user }}</p>
-			<p>{% trans "Real name: " %} {{ user.get_profile.firstname }} {{ user.get_profile.surname }}</p>
-			<p>{% trans "Age: " %} {{ user.get_profile.birthdate }}
-			<p>{% trans "Member for: " %} {{ user.date_joined }}</p>
-			<p>{% trans "E-mail:" %}
+			  <p>{% trans "Username: " %} {{ user }}</p>
+			  <p>{% trans "Real name: " %} {{ user.get_profile.firstname }} {{ user.get_profile.surname }}</p>
+			  <p>{% trans "Age: " %} {{ user.get_profile.birthdate }}
+			  <p>{% trans "Member for: " %} {{ user.date_joined }}</p>
+			  
+			  <p>{% trans "E-mail:" %}
 				<span class="{% if not email or not validated %}quiet red{% endif %}">
 				{%if not email %}
-				    {% trans "Not set yet" %}
+				  {% trans "Not set yet" %}
 				{% else %}
-				    {{ email }}
-				    {% if not validated %}
-				        {% trans " (Not validated)" %}
-				    {% endif %}
+				  {{ email }}
+				  {% if not validated %}
+				    {% trans " (Not validated)" %}
+				  {% endif %}
 				{% endif %}
 				</span>
-			</p>
-			<p>
-			<label for="location">{% trans "Country" %}:</label>
-			{% if user.get_profile.country %}
-				{{ user.get_profile.get_country_display }}
-			{% else %}
-				<span class="quiet red">{% trans "Not set" %}</span>
-			{% endif %}
-			</p>
+			  </p>
+			  
+			  <p><label for="location">{% trans "Country" %}:</label>
+			    {% if user.get_profile.country %}
+				    {{ user.get_profile.get_country_display }}
+			    {% else %}
+				    <span class="quiet red">{% trans "Not set" %}</span>
+			    {% endif %}
+			  </p>
 
-			<p>
-			    {% trans "Ciudad: " %} {{ user.get_profile.province }}
-			</p>
+			  <p>
+			    {% trans "City: " %} {{ user.get_profile.province }}
+			  </p>
+			
+			  <h1>Tus propuestas</h1>
+          {% for p in proposals %}
+          <div id="proposal-wrapper">
+            {% if user.is_staff %}
+              <div id="tools">
+                <a href="add/">{% trans "Add" %}</a> | 
+                <a href="edit/{{ p.id }}">{% trans "Edit" %}</a> |
+                <a href="delete/{{ p.id }}">{% trans "Delete" %}</a>
+              </div>
+            {% endif %}
+          <div id="votes">
+            <span style="font-size:30px;text-align:center;">{{ p.support_votes }}</span><br/>apoyos
+          </div>
+          <!-- Here goes the voting button -->
+          <div id="proposal">
+            <div class="title"><a href="{{ request.path }}view/{{ p.id }}/">{{ p.title }}</a></div>
+            <div class="message">{{ p.message|truncatewords:12 }}</div>
+            <div class="creator">{% trans "proposed by " %} <a href="/accounts/{{ p.author }}">{{ p.author }}</a> {% trans " at " %} {{ p.pub_date|date:"j/m/Y G:i" }}</div>
+          </div>
+          {% comment %}
+            The following div is to make the wrapper to wrap everything.
+          {% endcomment %}
+          <div style="clear:left;"></div>
+        
+          {% endfor %}
+        </div>
+      </div>
 
-		</div>
-    </div>
+{% endblock %}
+
+{% block rightcol %}
 
     <div id="profile_left">
         {% if GOOGLE_MAPS_API_KEY %}
@@ -94,23 +128,5 @@
 		    </div>
 		{% endif %}
     </div>
-
+    
 {% endblock %}
-
-{% block content-related %}
-	<div class="box">
-		<h3>{% trans "Management:" %}</h3>
-		<a href="{% url password_change %}">{% trans "Change password" %}</a>
-		<br />
-		<a href="{% url email_validation %}">{% if email %}{% trans "Change your e-mail address" %}{% else %}{% trans "Add your e-mail address" %}{% endif %}</a>
-		{% if not validated and email %}<br /><a href="{% url email_validation_reset %}">{% trans "Resend validation e-mail" %}</a>
-		{% endif %}
-		<br />
-		{% if not user.get_profile.location %}
-			<a href="{% url profile_edit_location %}">{% trans "Add location" %}</a>
-		{% else %}
-			<a href="{% url profile_edit_location %}">{% trans "Change location" %}</a>
-		{% endif %}
-	</div>
-{% endblock %}
-
