--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
 	<head>
 		<title>{% block title %}{% endblock %}</title>
-		<link rel="stylesheet" type="text/css" media="screen" href="/{{ MEDIA_URL }}css/screen.css"/>
-		<link rel="shortcut icon" href="/{{ MEDIA_URL }}assets/favicon.ico" type="image/ico"/>
+		<link rel="stylesheet" type="text/css" media="screen" href="/{{ STATIC_URL }}/css/screen.css"/>
+		<link rel="shortcut icon" href="/{{ STATIC_URL }}/assets/favicon.ico" type="image/ico"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="Description" content="Site description"/>
 		<meta name="Robots" content="all"/>
-		<script src="/{{ MEDIA_URL }}js/jquery.js" type="text/javascript"></script>
-  	<script src="/{{ MEDIA_URL }}js/jquery-ui.js" type="text/javascript"></script>
-		<script src="/{{ MEDIA_URL }}js/dropdown.js" type="text/javascript"></script>
+		<script src="/{{ STATIC_URL }}/js/jquery.js" type="text/javascript"></script>
+  	<script src="/{{ STATIC_URL }}/js/jquery-ui.js" type="text/javascript"></script>
+		<script src="/{{ STATIC_URL }}/js/dropdown.js" type="text/javascript"></script>
 	</head>
 	<body>
 	  <div id="topbar">
@@ -27,13 +27,13 @@
 
 	      <div id="logo">
 	        {% block logo %}
-	          <a href="/"><img src="/{{ MEDIA_URL }}spaces/logos/logo_index.png"/></a>
+	          <a href="/"><img src="/{{ STATIC_URL }}/assets/logos/index.png"/></a>
 	        {% endblock %}
 	      </div>
 
 	      <div id="banner">
 	        {% block banner %}
-	          <img src="/{{ MEDIA_URL }}spaces/banners/banner_index.png"/>
+	          <img src="/{{ STATIC_URL }}/assets/banners/index.png"/>
 	        {% endblock %}
 	      </div>
 
@@ -56,7 +56,7 @@
       
       <div id="footerimg">
         {% block footerimg %}
-          <img src="/{{ MEDIA_URL }}assets/logocidadania.jpg" /><br />
+          <img src="/{{ STATIC_URL }}/assets/logocidadania.jpg" /><br />
           Corredoira das Fraguas, 5, 1 izq.<br />
           15703 Santiago de Compostela<br />
           A Coruña<br />
