--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -9,10 +9,10 @@
   <div id="centercol">
 
     <div>
-      <p><img src="/{{ MEDIA_URL }}assets/indextitle.png" /></p><br /><br />
+      <p><img src="/{{ STATIC_URL }}/assets/indextitle.png" /></p><br /><br />
       <p class="intro">{% trans "e-cidadania is a participative democracy tool for citizens. It has an advanced debate system, proposals, document versioning, and you can create specific spaces for every process, it has a lot of functions more but it's better that you try it by yourself." %}
       </p>
-      <br /><span style="margin-left: 35%;"><img src="/{{ MEDIA_URL }}assets/sep.png"/></span><br />
+      <br /><span style="margin-left: 35%;"><img src="/{{ STATIC_URL }}/assets/sep.png"/></span><br />
     </div>
 
     {% if user.is_staff %}
@@ -75,12 +75,12 @@
 
     <div id="widget">
       <h4>Compartir</h4><br />
-      <img src="/{{ MEDIA_URL }}assets/logos/rss_logo.png" alt="Feed RSS"/>
-      <a href="http://www.facebook.com/cidadania.coop"><img src="/{{ MEDIA_URL }}assets/logos/facebook_logo.png" alt="Facebook"/></a>
+      <img src="/{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/>
+      <a href="http://www.facebook.com/cidadania.coop"><img src="/{{ STATIC_URL }}/assets/logos/facebook_logo.png" alt="Facebook"/></a>
       <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
-      <a href="http://tuenti.com"><img src="/{{ MEDIA_URL }}assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
-      <a href="http://linkedin.com"><img src="/{{ MEDIA_URL }}assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
-      <a href="http://identi.ca/ecidadania"><img src="/{{ MEDIA_URL }}assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
+      <a href="http://tuenti.com"><img src="/{{ STATIC_URL }}/assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
+      <a href="http://linkedin.com"><img src="/{{ STATIC_URL }}/assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
+      <a href="http://identi.ca/ecidadania"><img src="/{{ STATIC_URL }}/assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
       <p><br />{% trans "Your favourite social site isn't here? Tell us!" %}</p>
     </div>
 
