Fixed STATIC_URL in 404 and 500 pages

--- a/src/e_cidadania/templates/404.html
+++ b/src/e_cidadania/templates/404.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
 	<head>
 		<title>{% block title %}404 - Not Found{% endblock %}</title>
-		<link rel="shortcut icon" href="/{{ MEDIA_URL }}assets/favicon.ico" type="image/ico"/>
+		<link rel="shortcut icon" href="/{{ STATIC_URL }}/assets/favicon.ico" type="image/ico"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="Description" content="Site description"/>
 		<meta name="Robots" content="all"/>
@@ -56,7 +56,7 @@
 		</style>
 	</head>
 	<body>
-	  <a href="http://www.clipartpal.com/clipart_pd/holiday/halloween/witchesbroom_10597.html"><img src="http://www.clipartpal.com/_thumbs/pd/holiday/halloween/witch_on_broom_01.png" width="130" height="120" border="0" alt="Clip art of a silhouette of a black witch flying on a broom on Halloween, Click here to get more Free Clipart at ClipartPal.com"></a>
+	  <img src="http://www.clipartpal.com/_thumbs/pd/holiday/halloween/witch_on_broom_01.png" width="130" height="120" border="0" alt="Silhouette of a black witch flying on a broom">
 	  <div id="title"><span style="font-size:45px;">{% trans "Not Found!" %} </span><strong>404</strong></div>
 	  <div id="bottom">
 	    <p class="text">
