--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -3,8 +3,8 @@
 {% load comments %}
 
 {% block title %}{{ get_place.name|capfirst }} - {% trans "Index" %}{% endblock %}
-{% block logo %}<img src="/{{MEDIA_URL}}{{ get_place.logo }}">{% endblock %}
-{% block banner %}<img src="/{{MEDIA_URL}}{{ get_place.banner }}">{% endblock %}
+{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block menu%}
 {% endblock %}
