Updated all the spaces templates for MEDIA_URL and STATIC_URL

--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -52,7 +52,7 @@
           <ul>
             {% for doc in documents %}
               <li>
-                <a href="/{{ MEDIA_URL }}{{ doc.docfile }}">{{ doc.title }}</a>
+                <a href="/{{ MEDIA_URL }}/{{ doc.docfile }}">{{ doc.title }}</a>
                 {% if user.is_staff %}
                   (<a href="{{ request.path }}docs/{{ doc.id }}/edit/">Edit</a> | 
                   <a href="{{ request.path }}docs/{{ doc.id }}/delete/">Delete</a>)
