--- a/src/e_cidadania/apps/proposals/templates/proposal/proposal_list.html
+++ b/src/e_cidadania/apps/proposals/templates/proposal/proposal_list.html
@@ -3,6 +3,8 @@
 {% load comments %}
 
 {% block title %}{% trans "View proposals" %}{% endblock %}
+{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block content %}
 
