Finished writing the history dates of the web, and styled a bit more

--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -4,6 +4,16 @@ body {
 	background: #FFF; /*A5EB4B;*/
 }
 
+a {
+    color: #777;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #000;
+    text-decoration: underline;
+}
+
 /* get rid of those system borders being generated for A tags */
 a:active {
   outline:none;
@@ -65,6 +75,11 @@ a:active {
 		padding:10px;
 	}
 	
+	.item h1 {
+	    margin: 5px;
+	    font-size: 20px;
+	}
+	
 	/* main navigator */
 	#main_navi {
 		float:left;
@@ -111,17 +126,24 @@ a:active {
 	    margin: 0;
 		margin-left:250px;
 		cursor:pointer;
+		font-size: 0.75em;
 	}
 	
-	.help {
-	    font-size: 0.75em;
+	.info {
+	    padding: 5px;
+	    background: #444;
 	    color: #FFF;
-	    font-weight: bold;
-	    margin-left: 240px;
+	    width: 170px;
+	    font-size: 0.75em;
+	    -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        margin: -25px 0px 0px 320px;
+	    
 	}
 	
 	.timeline-event-label{
-	    font-size: 9px;
+	    font-size: 12px;
 	}
 /* THIS IS A DEPRECATED PART OF THE SCROLLER, BUT NEEDED FOR THE SLIDER */
 
