--- a/src/e_cidadania/apps/news/templates/news/post_edit.html
+++ b/src/e_cidadania/apps/news/templates/news/post_edit.html
@@ -11,7 +11,7 @@
     <div id="centercol">
       <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
 
-        {{ form.as_p }}
+        {{ form.as_p|safe }}
 
         <hr />
 
