--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -623,7 +623,7 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 
 .post {
     width: 100%;
-    border: 1px solid #aaa;
+    border: 1px 1px 5px 1px solid #aaa;
     background: #fff;
     margin: 20px 5px 20px 5px;
     -webkit-border-top-left-radius: 20px;
@@ -637,6 +637,10 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 .post h1 {
     margin: 15px;
     font-size: 1.5em;
+}
+
+.post a {
+    color: #333;
 }
 
 .post p {
