--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load wysiwyg %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
 	<head>
@@ -11,6 +12,7 @@
 		<script src="/{{ STATIC_URL }}/js/jquery.js" type="text/javascript"></script>
   	<script src="/{{ STATIC_URL }}/js/jquery-ui.js" type="text/javascript"></script>
 		<script src="/{{ STATIC_URL }}/js/dropdown.js" type="text/javascript"></script>
+		{% wysiwyg_setup %}
 	</head>
 	<body>
 	  <div id="topbar">
