--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -31,7 +31,7 @@
             </div>
           {% endif %}
           <h1><a href="{{ request.path }}news/{{ news.id }}">{{ news.post_title }}</a></h1>
-          <p>{{ news.post_message }}</p>
+          <p>{{ news.post_message|safe }}</p>
           <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</p>
         </div>
       {% endif %}
